# hsVox

./: LICENSE  README.md  TODO  hsVox.cabal  stack.yaml
app/: Main.hs
res/shaders/: simple.fs  simple.vs
src/: Chunk.hs  Config.hs  Graphics.hs  Input.hs  Lib.hs  State.hs
