name:                hsVox
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hsVox#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Chunk, Graphics, State, Input, Config
  build-depends:       base >= 4.7 && < 5,
                       GLFW-b == 1.*,
                       OpenGL >= 3,
                       vector >= 0.12,
                       bytestring >= 0.10,
                       GLUtil >= 0.9,
                       filepath >= 1.0,
                       linear >= 1.0,
                       lens >= 4.15,
                       mtl >= 2.2,
                       containers >= 0.5
  default-language:    Haskell2010
  default-extensions:          OverloadedStrings, TemplateHaskell

executable hsVox-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hsVox
  default-language:    Haskell2010

test-suite hsVox-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hsVox
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hsVox
